2008-12-17   <> 

	* Messages/MessagePartModel.cs, Messages/TextMessagePartModel.cs: Use nicer
	  field name convention.

2008-12-17   <> 

	* Config/Config.cs: Renamed ModeColor to EventColor.
	* Messages/MessageModel.cs: Added MessageType.

2008-09-28   <> 

	* Session.cs: Don't throw exception in
	  DeregisterFrontendManager(FrontendManager) as the frontend manager might
	  be cleanly gone already at that point. (closes trac ticket #117)

2008-09-28   <> 

	* Config/FrontendConfig.cs: Implemented SSH tunnel support. (closes trac
	  ticket #64)

2008-09-23   <> 

	* FrontendManager.cs: Replaced poor mans Queue in FrontendManager with
	  TaskQueue from Alan McGovern <alan.mcgovern@gmail.com>.

2008-09-04  Mirco Bauer <meebey@meebey.net> 

	* Session.cs: Added hint about /help command to smuxi page.

2008-08-31  Mirco Bauer <meebey@meebey.net> 

	* Engine.mdp: Added po files to MonoDevelop projects.

2008-08-25  Mirco Bauer <meebey@meebey.net> 

	* Engine.cs: Show platform and CPU bit count in version string.

2008-08-25  Mirco Bauer <meebey@meebey.net> 

	* Engine.cs: Fixed switching between local engine and remote engine back and
	  forth. (closes trac bug #106)

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* Messages/UrlMessagePartModel.cs: Fallback to HTTP.

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* FrontendManager.cs, Protocols/ProtocolManagerBase.cs, Session.cs: Using
	  LibraryCatalog now.

2008-08-22  Mirco Bauer <meebey@meebey.net> 

	* Config/ServerListController.cs: Throw exception in AddServer() if the
	  server exists already. (closes trac bug #100)
	
	  Added null checks to all methods.

2008-08-21  Mirco Bauer <meebey@meebey.net> 

	* Persons/ContactModel.cs, Persons/PersonModel.cs: Fixed whitespace
	  (replaced \t with 4 spaces).

2008-08-21  Mirco Bauer <meebey@meebey.net> 

	* Session.cs: Don't handle quit command in session. (closes trac bug #92)

2008-08-04  Mirco Bauer <meebey@meebey.net> 

	* TextColor.cs: Renamed HexCode to Value.
	